[package]
name = "ocean_loss_estimator_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
chrono = { version = "0.4.37", features = ["serde"] }
anyhow = "1.0.82"
dashmap = "5.5.0"
indicatif = "0.17.8"

[[bin]]
name = "check_api_stability"
path = "src/bin/check_api_stability.rs"

[[bin]]
name = "fetch_pools"
path = "src/bin/fetch_pools.rs"

[[bin]]
name = "fetch_prices"
path = "src/bin/fetch_prices.rs"

[[bin]]
name = "ocean_concurrent"
path = "src/bin/ocean_concurrent.rs"

[[bin]]
name = "ocean_health"
path = "src/bin/ocean_health.rs"

[[bin]]
name = "ocean_reward_delta"
path = "src/bin/ocean_reward_delta.rs"
